--- a/index.html
+++ b/index.html
@@ -13,9 +13,76 @@
 
   <nav class="navbar navbar-default"></nav>
   <svg width="960" height="600"></svg>
-  
+
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="//d3js.org/topojson.v2.min.js"></script>
+  <script>
+    let svg = d3.select("svg");
+    const width = +svg.attr("width"),
+          height = +svg.attr("height");
+
+    const unemployment = d3.map();
+
+    // xとは？
+    const x = d3.scaleLinear()
+      .domain([1,10])
+      .rangeRound([600,860]); // 数字に意味は無い、凡例の幅を適当に決めている。数字を変更すると何が起きてるか分かる
+
+    const color = d3.scaleThreshold() // #1
+      .domain(d3.range(2,10)) 
+      .range(d3.schemeBlues[9])
+
+    /*
+    #1
+    d3.scaleThreshold()
+    しきい値で色を判定します。domainに入力された配列がしきい値になるため、rangeにはdomainより1つ多い配列要素が必要です。
+    var color = d3.scaleThreshold()
+      .domain([0, 1])
+      .range(["red", "white", "green"]);
+    */
+
+    let g = svg.append("g")
+      .attr("class","key")
+      .attr("transform","translate(0,40)");
+
+    // 凡例
+    g.selectAll("rect")
+      .data(color.range().map(d => {
+        // 各色のデータの対応範囲を設定
+        // デフォルトでは範囲が不完全なので以下の処理で補完
+        // console.log(color.invertExtent(d),d)
+        d = color.invertExtent(d);
+        if (d[0] == null) d[0] = x.domain()[0];
+        if (d[1] == null) d[1] = x.domain()[1];
+        return d;
+      }))
+      .enter().append("rect")
+        .attr("x", d => x(d[0]))
+        .attr("width", d => x(d[1]) - x(d[0]))
+        .attr("height",8)
+        .attr("fill", d => color(d[0]))
+
+    // 凡例のタイトル
+    g.append("text")
+      .attr("class","caption")
+      .attr("x",x.range()[0])
+      .attr("y", -6)
+      .attr("fill","#000")
+      .attr("text-anchor","start")
+      .attr("font-weight","bold")
+      .text("Unemplyment rate")
+
+    // 凡例のメモリ
+    g.call(
+        d3.axisBottom(x)
+        .tickSize(13)
+        .tickFormat((x,i) => i ? x : x + "%")
+        .tickValues(color.domain())
+      )
+      .select(".domain")
+      .remove()
+
+  </script>
 </body>
 </html>
