--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           height = +svg.attr("height");
 
     const unemployment = d3.map();
+    const path = d3.geoPath();
 
     // xとは？
     const x = d3.scaleLinear()
@@ -81,7 +82,51 @@
         .tickValues(color.domain())
       )
       .select(".domain")
-      .remove()
+      .remove();
+
+    let prmsz = [
+      d3.json("https://d3js.org/us-10m.v1.json"),
+      d3.tsv("data/map.tsv",  d => { 
+        // unemplymentと言うマップ関数にキー・バリューを設定している
+        unemployment.set(d.id, +d.rate);
+      })
+    ]
+
+    Promise.all(prmsz).then(data => {
+      console.log(data)
+      ready(data[0]);
+    }).catch(err => {
+      console.log(err)
+    })
+
+    function ready(us){
+
+      svg.append("g")
+        .attr("class","countries")
+        .selectAll("path")
+        // arc、polygonなどからfeaturesのみ抽出しjsonを作る？
+        .data(topojson.feature(us, us.objects.counties).features)
+        .enter().append("path")
+        .attr("fill", d => {
+          // console.log(d)
+          return color(d.rate = unemployment.get(d.id));
+        })
+        .attr("d",path)
+        .append("title")
+        .text(d =>{ 
+          // svgのデフォルトの挙動
+          // titleを設定するとホバーで表示される
+          return d.rate + "%"
+        });
+
+      svg.append("path")
+        .datum(topojson.mesh(us,us.objects.states, (a,b) => {
+          return a !== b;
+        }))
+        .attr("class","states")
+        .attr("d",path);
+        
+    }
 
   </script>
 </body>
