--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       svg.append("g")
         .attr("class","countries")
         .selectAll("path")
-        // arc、polygonなどからfeaturesのみ抽出しjsonを作る？
+        // arc、polygonなどからFeatureのみ集めたGeoJSONを作成
         .data(topojson.feature(us, us.objects.counties).features)
         .enter().append("path")
         .attr("fill", d => {
@@ -121,9 +121,9 @@
 
       // 州を区切る線
       svg.append("path")
-        .datum(topojson.mesh(us,us.objects.states, (a,b) => {
+        .data([topojson.mesh(us,us.objects.states, (a,b) => {
           return a !== b;
-        }))
+        })])
         .attr("class","states")
         .attr("d",path);
         
